--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "parcel": "^2.12.0"
   },
   "dependencies": {
-    "core-js": "^3.36.1",
-    "fracty": "^1.0.0",
-    "regenerator-runtime": "^0.14.1"
+    "fracty": "^1.0.11"
   }
 }
